# devops-agent

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  config.yaml.example  pyproject.toml  server.py
.github/workflows/: ci.yml
clients/: __init__.py  exceptions.py  github_client.py  slack_client.py  zentao_client.py
tests/: conftest.py  test_github_client.py  test_server.py  test_slack_client.py
tools/: __init__.py  github_tools.py  slack_tools.py  zentao_tools.py
