[project]
name = "devops-agent"
version = "0.1.0"
description = "DevOps Agent MCP Server - 集成 GitLab 和 Slack"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "slack-sdk>=3.33.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
]

[project.scripts]
devops-agent = "server:main"
